[DataTable]: Fix overflow

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -1,6 +1,5 @@
 body, html {
     height: 100%;
-    min-width: min-content;
 }
 
 body {
