--- a/uui-components/src/table/DataTable.scss
+++ b/uui-components/src/table/DataTable.scss
@@ -20,7 +20,8 @@
 }
 
 .listContainer {
-    overflow: hidden;
+    display: grid;
+    grid-template-rows: 1fr;
 }
 
 :global(.uui-scroll-shadow-top) {
